--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,9 +7,38 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: whitesmoke;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  margin: 100px;
+}
+
+.country-card {
+  background-color: white;
+  width: 250px;
+  height: 350px;
+  margin-bottom: 35px;
+  border-radius: 10px;
+}
+
+.country-flag {
+  border-radius: 5px 5px 0px 0px;
+}
+
+.country-card-info {
+  margin: 15px;
+  font-size: 12px;
+}
+
+.country-card-name {
+  margin: 15px;
+  font-size: 20px;
 }
