Fixed page navigation bug

--- a/src/index.css
+++ b/src/index.css
@@ -197,6 +197,12 @@ select {
   box-shadow: 1px 1px 8px 1px hsl(208, 24%, 15%);
 }
 
+.borders-grid {
+  display: grid;
+  grid-template-columns: repeat(6, 80px);
+  grid-gap: 10px
+}
+
 /*Change Place Holder search input color */
 ::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
   color: var(--input-color);
